--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="/dist/output.css" rel="stylesheet" />
+		<link href="./dist/output.css" rel="stylesheet" />
 	</head>
 	<body class="flex min-h-screen w-full items-center justify-center bg-cream">
 		<div class="container m-8 flex items-center justify-center">
