--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 				class="grid-row-1 grid max-w-3xl grid-cols-none overflow-hidden rounded-lg bg-white font-monserrat lg:grid-cols-[1fr_1fr] lg:grid-rows-none"
 			>
 				<img
-					src="/img/image-product-desktop.jpg"
+					src="./img/image-product-desktop.jpg"
 					alt=""
 					class="hidden lg:block lg:max-w-full"
 				/>
 				<img
-					src="/img/image-product-mobile.jpg"
+					src="./img/image-product-mobile.jpg"
 					alt=""
 					class="block min-w-full lg:hidden"
 				/>
