--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<button
 							class="flex items-center gap-3 rounded-lg bg-darkcyan py-4 px-[104px] font-medium text-white transition-all hover:bg-verydarkblue lg:px-24"
 						>
-							<img src="/img/icon-cart.svg" alt="" />
+							<img src="./img/icon-cart.svg" alt="" />
 							<span>Add to Cart</span>
 						</button>
 					</div>
